--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -1,37 +1,33 @@
-
 .tabs {
 	display: flex;
 	list-style: none;
-	
-	.tab-item {
-		position: relative;
-		font-size: 14px;
-		
-		&:not(:first-child) {
-			margin-left: 25px;
-		}
-		
-		.item-link {
-			color: black;
-			text-decoration: none;
-		}
-		
-		.active {
-			color: #4D38D7;
-		}
-
-		.link-line {
-			position: absolute;
-			width: 100%;
-			height: 2px;
-			bottom: -9px;
-			background-color:#4D38D7;
-		}
-	}
-	
+	padding-bottom: 7px;
+	border-bottom: 1px solid #d0d0d0;
+	position: relative;
 }
 
-.line {
-	border: 1px solid #D0D0D0;
-	margin-top: 7px;
+.tab-item {
+	position: relative;
+	font-size: 14px;
+
+	&:not(:first-child) {
+		margin-left: 25px;
+	}
+}
+
+.item-link {
+	color: black;
+	text-decoration: none;
+}
+
+.active {
+	color: #4d38d7;
+}
+
+.link-line {
+	position: absolute;
+	bottom: -1px;
+	height: 2px;
+	background-color: #4d38d7;
+	transition: left 0.3s ease, width 0.3s ease;
 }
