--- a/src/components/TopTitle/TopTitle.module.scss
+++ b/src/components/TopTitle/TopTitle.module.scss
@@ -1,10 +1,13 @@
 .main-top {
-	display: flex;
-	flex-direction: column;
-
 	p {
-		margin-bottom: 10px;
+		color: #555555;
+		font-size: 14px;
 	}
 
-	margin-bottom: 20px;
+	h2 {
+		margin-top: 10px;
+		margin-bottom: 20px;
+		font-weight: bold;
+		font-size: 24px;
+	}
 }
