--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -9,13 +9,25 @@
 	background: rgba(255, 255, 255, 80%);
 	border-radius: 8px;
 	padding: 17px 48px;
+
 	&::placeholder {
 		font-family: 'Inter', sans-serif;
-		color: #1C1C1C;
+		color: #1c1c1c;
 	}
 }
 
 .invalid {
 	border: 1px solid red;
 	background-color: rgb(255, 189, 189);
+}
+
+.darker {
+	background-color: #f9f9f9;
+	padding: 16px 20px;
+	width: 300px;
+	height: 50px;
+
+	&::placeholder {
+		color: rgba(0, 0, 0, 0.4);
+	}
 }
