--- a/src/pages/Settings/SettingsAbout/SettingsAbout.module.scss
+++ b/src/pages/Settings/SettingsAbout/SettingsAbout.module.scss
@@ -1,3 +1,38 @@
 .settings {
-	font-family: 'Inter';
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 40px;
+}
+
+.top-info {
+	display: flex;
+	align-items: center;
+}
+
+.text-info {
+	margin-left: 31px;
+	h2 {
+		font-size: 24px;
+		font-weight: bold;
+	}
+
+	p {
+		margin-top: 13px;
+		font-size: 14px;
+	}
+}
+
+.editable-fields {
+	margin-top: 38px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	row-gap: 32px;
+	column-gap: 46px;
+}
+
+.edit-field {
+	p {
+		margin-bottom: 10px;
+		font-size: 14px;
+	}
 }
