--- a/src/layout/Main/MainLayout.module.scss
+++ b/src/layout/Main/MainLayout.module.scss
@@ -15,7 +15,7 @@
 	margin-top: 14px;
 	background-color: var(--main-theme);
 	border-radius: 8px 8px 0 0;
-	background-image: url('/public/main/main.svg');
+	background-image: url('/main/main.svg');
 	background-repeat: no-repeat;
 	background-position-y: center;
 }
