--- a/src/pages/Settings/SettingsAbout/SettingsAbout.module.scss
+++ b/src/pages/Settings/SettingsAbout/SettingsAbout.module.scss
@@ -1,7 +1,11 @@
 .settings {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 40px;
+	align-items: flex-start;
+
+	button {
+		margin-top: 40px;
+	}
 }
 
 .top-info {
