finished search functions, added filter as modal, also deleted unnesassary qeuryoptions

--- a/src/features/profile/components/SettingsAbout/SettingsAbout.module.scss
+++ b/src/features/profile/components/SettingsAbout/SettingsAbout.module.scss
@@ -40,3 +40,21 @@
 		font-size: 14px;
 	}
 }
+
+.error-message {
+	background-color: #ffeeee;
+	border: 1px solid #ffcccc;
+	color: #cc0000;
+	padding: 12px;
+	border-radius: 4px;
+	font-size: 14px;
+}
+
+.success-message {
+	background-color: #eeffee;
+	border: 1px solid #ccffcc;
+	color: #00cc00;
+	padding: 12px;
+	border-radius: 4px;
+	font-size: 14px;
+}
