--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -6,6 +6,7 @@
 	font-family: 'Inter';
 	font-weight: 600;
 	padding: 12px 24px;
+	width: fit-content;
 }
 
 .green {
@@ -22,4 +23,9 @@
 	color: black;
 	background-color: white;
 	outline: 1px solid var(--main-theme);
+}
+
+.red {
+	color: white;
+	background-color: #e74c3c;
 }
