--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -43,3 +43,21 @@
 		color: rgba(0, 0, 0, 0.4);
 	}
 }
+
+.asd {
+	padding: 12px 16px;
+	border: 1px solid #e0e0e0;
+	border-radius: 6px;
+	font-size: 16px;
+	width: 100%;
+
+	&::placeholder {
+		color: #9e9e9e;
+	}
+
+	&:focus {
+		outline: none;
+		border-color: #3d7dca;
+		box-shadow: 0 0 0 2px rgba(61, 125, 202, 0.2);
+	}
+}
