--- a/src/features/profile/components/ProfilePublications/ProfilePublications.module.scss
+++ b/src/features/profile/components/ProfilePublications/ProfilePublications.module.scss
@@ -2,12 +2,17 @@
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
-	width: 766px;
+	width: 100%;
 }
 
 .search-bar {
 	display: flex;
 	gap: 10px;
+
+	a {
+		text-decoration: none;
+		color: white;
+	}
 }
 
 .articles {
