--- a/src/features/article/components/Article/Article.module.scss
+++ b/src/features/article/components/Article/Article.module.scss
@@ -8,13 +8,9 @@
 		display: block;
 		margin: 5px 0;
 		font-size: 14px;
-
-		&:last-of-type {
-			margin-bottom: 20px;
-		}
 	}
 
-	a {
+	> a {
 		display: block;
 		font-size: 14px;
 		color: var(--main-theme);
@@ -24,4 +20,25 @@
 
 .authors {
 	margin: 10px 0 !important;
+}
+
+.buttons {
+	display: flex;
+	gap: 20px;
+	margin-top: 20px;
+
+	> a {
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+	.watch {
+		color: var(--main-theme);
+	}
+
+	.edit {
+		color: #e67e22;
+	}
 }
