--- a/src/features/auth/components/Login/Login.module.scss
+++ b/src/features/auth/components/Login/Login.module.scss
@@ -123,3 +123,20 @@
 	color: white;
 	padding: 20px;
 }
+
+.register-link {
+	font-size: 14px;
+	color: #525252;
+	text-align: center;
+	margin-top: 15px;
+
+	a {
+		color: var(--main-theme);
+		text-decoration: none;
+		font-weight: 500;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
