--- a/src/features/search/components/SearchPublications/SearchPublications.module.scss
+++ b/src/features/search/components/SearchPublications/SearchPublications.module.scss
@@ -16,3 +16,33 @@
 	flex-direction: column;
 	gap: 15px;
 }
+
+.sort {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	align-items: center;
+}
+
+.options {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	background: white;
+	border: 1px solid #e5e7eb;
+	border-radius: 4px;
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+	z-index: 10;
+	min-width: 200px;
+
+	> p {
+		padding: 12px 10px;
+		font-size: 16px;
+		cursor: pointer;
+
+		&:hover {
+			background-color: #f4f7fa;
+		}
+	}
+}
