--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -29,13 +29,12 @@
 	display: flex;
 	align-items: center;
 	margin-left: 25px;
-
-	.logo-name {
-		margin-left: 15px;
-		font-family: 'IBM Plex Mono';
-		text-transform: uppercase;
-		font-size: 32px;
-	}
+}
+.logo-name {
+	margin-left: 15px;
+	font-family: 'IMBM Plex Mono';
+	text-transform: uppercase;
+	font-size: 32px;
 }
 
 .line {
