--- a/src/features/profile/components/ProfileOverview/ProfileOverview.module.scss
+++ b/src/features/profile/components/ProfileOverview/ProfileOverview.module.scss
@@ -44,7 +44,8 @@
 	width: 100%;
 	& > h2 {
 		margin-left: 10px;
-		margin-bottom: 30px;
+		margin-bottom: 10px;
+		margin-top: 10px;
 	}
 }
 
@@ -70,6 +71,7 @@
 		display: flex;
 		gap: 20px;
 		margin-bottom: 20px;
+		align-items: flex-end;
 	}
 
 	&__field {
@@ -102,5 +104,23 @@
 		&:hover {
 			background-color: #0056b3;
 		}
+	}
+}
+
+.loading-spinner {
+	width: 16px;
+	height: 16px;
+	border: 2px solid transparent;
+	border-top: 2px solid currentColor;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
 	}
 }
