--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -8,7 +8,9 @@
 
 .tab-item {
 	position: relative;
-	font-size: 14px;
+	font-size: 16px;
+	white-space: nowrap;
+	flex-shrink: 0;
 
 	&:not(:first-child) {
 		margin-left: 25px;
@@ -18,6 +20,8 @@
 .item-link {
 	color: black;
 	text-decoration: none;
+	display: block;
+	padding: 0 4px;
 }
 
 .active {
@@ -30,4 +34,54 @@
 	height: 2px;
 	background-color: #4d38d7;
 	transition: left 0.3s ease, width 0.3s ease;
+}
+
+/* Адаптивные стили */
+@media (max-width: 768px) {
+	.tabs {
+		padding-bottom: 6px;
+		-webkit-overflow-scrolling: touch;
+
+		/* Скрываем скроллбар в WebKit браузерах */
+		&::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Скрываем скроллбар в Firefox */
+		scrollbar-width: none;
+	}
+
+	.tab-item {
+		font-size: 13px;
+
+		&:not(:first-child) {
+			margin-left: 20px;
+		}
+	}
+
+	.item-link {
+		padding: 6px 2px;
+	}
+}
+
+@media (max-width: 480px) {
+	.tabs {
+		padding-bottom: 5px;
+	}
+
+	.tab-item {
+		font-size: 12px;
+
+		&:not(:first-child) {
+			margin-left: 15px;
+		}
+	}
+
+	.item-link {
+		padding: 5px 1px;
+	}
+
+	.link-line {
+		height: 1px;
+	}
 }
