--- a/src/features/article/components/EditPublication/EditPublication.module.scss
+++ b/src/features/article/components/EditPublication/EditPublication.module.scss
@@ -173,6 +173,15 @@
 	justify-content: flex-end;
 }
 
+.error-message {
+	background-color: #ffeeee;
+	border: 1px solid #ffcccc;
+	color: #cc0000;
+	padding: 12px;
+	border-radius: 4px;
+	font-size: 14px;
+}
+
 @keyframes fadeIn {
 	from {
 		opacity: 0;
