--- a/src/features/auth/components/Login/Login.module.scss
+++ b/src/features/auth/components/Login/Login.module.scss
@@ -61,11 +61,7 @@
 	}
 
 	button {
-		background-color: var(--main-theme);
-		color: white;
-		padding: 16px 0 17px;
-		font-family: 'Inter', sans-serif;
-		font-size: 15px;
+		width: 100%;
 	}
 }
 
@@ -129,20 +125,19 @@
 	padding: 20px;
 }
 
-.register-link {
-	font-size: 14px;
-	color: #525252;
-	text-align: center;
-	margin-top: 15px;
+.links {
+	display: flex;
+	width: 100%;
+	justify-content: space-around;
+}
 
-	a {
-		color: var(--main-theme);
-		text-decoration: none;
-		font-weight: 500;
+a {
+	color: var(--main-theme);
+	text-decoration: none;
+	font-weight: 500;
 
-		&:hover {
-			text-decoration: underline;
-		}
+	&:hover {
+		text-decoration: underline;
 	}
 }
 
@@ -151,6 +146,10 @@
 	.login-page {
 		flex-direction: column;
 		padding: 20px;
+	}
+
+	img {
+		display: none;
 	}
 
 	.left-side {
