--- a/src/features/auth/components/Login/Login.module.scss
+++ b/src/features/auth/components/Login/Login.module.scss
@@ -101,10 +101,16 @@
 }
 
 .another-way {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	row-gap: 10px;
-	column-gap: 8px;
+	// display: grid;
+	// grid-template-columns: repeat(3, 1fr);
+	// row-gap: 10px;
+	// column-gap: 8px;
+
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 
 	a {
 		padding: 10px 34px;
@@ -117,6 +123,37 @@
 			height: 30px;
 		}
 	}
+
+	> button {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+}
+
+.yandex-btn {
+	width: 364px;
+	background-color: black;
+	color: white;
+	border: none;
+	font-weight: 600;
+	cursor: pointer;
+	height: 42px;
+	font-size: 14px;
+	border-radius: 8px;
+}
+
+.vk-btn {
+	margin-top: 10px;
+	width: 364px;
+	background-color: #4c75a3;
+	color: white;
+	border: none;
+	font-weight: 600;
+	cursor: pointer;
+	height: 42px;
+	font-size: 14px;
+	border-radius: 8px;
 }
 
 .error {
